--- a/genetica.html
+++ b/genetica.html
@@ -15,7 +15,7 @@
   <nav class="nav">
     <div class="inner">
       <div class="brand">
-        <img class="logo" src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/logo%20micro1.png" alt="Logo Microdeleción 15q11.2">
+        <img class="logo" src="https://raw.githubusercontent.com/Evelez23/microdelecion-15q11.2/refs/heads/main/img/logo%20micro1.webp" alt="Logo Microdeleción 15q11.2">
         <div>Microdeleción 15q11.2</div>
       </div>
             <div class="nav-links">
