--- a/genetica.html
+++ b/genetica.html
@@ -36,7 +36,7 @@
 
     <!-- Hero con imagen -->
     <div class="hero-genetica">
-      <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/7572d736-f7ab-41b2-84a4-1b5a419f2c94.jpg" alt="Familias y microdeleción" class="hero-image">
+      <img src="https://raw.githubusercontent.com/Evelez23/microdelecion-15q11.2/refs/heads/main/img/IMG-20250823-WA0014.webp" alt="Familias y microdeleción" class="hero-image">
     </div>
 
     <!-- Qué es -->
