--- a/genetica.html
+++ b/genetica.html
@@ -59,7 +59,7 @@
         </ul>
       </div>
       <div class="panel image-panel">
-        <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/i%CC%81cono%20DNA.png" alt="Icono ADN" class="icono-dna">
+        <img src="https://raw.githubusercontent.com/Evelez23/microdelecion-15q11.2/refs/heads/main/img/COLOURBOX6437815_0.webp" alt="Icono ADN" class="icono-dna">
       </div>
     </div>
 
@@ -92,7 +92,7 @@
         </ul>
       </div>
       <div class="panel image-panel">
-        <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/ChatGPT%20Image%2013%20ago%202025%2C%2010_39_09.png" alt="Ilustración genes" class="image-side">
+        <img src="https://raw.githubusercontent.com/Evelez23/microdelecion-15q11.2/refs/heads/main/img/micro.webp" alt="Ilustración genes" class="image-side">
       </div>
     </div>
 
