--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       
       <div class="hero-image">
-        <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/82526dd8-8147-48ea-88dc-700b6a49ebf8.png" 
+        <img src="https://raw.githubusercontent.com/Evelez23/microdelecion-15q11.2/refs/heads/main/img/82526dd8-8147-48ea-88dc-700b6a49ebf8.webp" 
              alt="Mi hijo empujando su caminadora - cada pequeño paso es una victoria" 
              class="pintura-oleo">
         <p class="pie-foto">Cada pequeño paso es una victoria - Familia 15q11.2</p>
