--- a/recursos.html
+++ b/recursos.html
@@ -316,7 +316,7 @@
                     <div class="resource-icon">❓</div>
                     <h3>Preguntas para Especialistas</h3>
                     <p>Lista de preguntas importantes para hacer en consultas con genetistas y neurólogos.</p>
-                    <a href="resources/preguntas-genetista.pdf" class="btn-download" download>
+                    <a href="https://github.com/Evelez23/microdelecion-15q11.2/blob/main/resources/preguntas-genetista.pdf.pdf" class="btn-download" download>
                         <span>Descargar PDF</span>
                     </a>
                 </div>
