--- a/recursos.html
+++ b/recursos.html
@@ -342,7 +342,7 @@
                     <span class="tag tag-link">Inglés</span>
                 </li>
                 <li>
-                    <a href="https://medlineplus.gov/spanish/genetics/condition/15q112-microdeletion/" target="_blank">MedlinePlus - Información en español</a>
+                    <a href="https://medlineplus.gov/spanish/ency/article/002048.htm" target="_blank">MedlinePlus - Información en español</a>
                     <span class="tag tag-link">Español</span>
                 </li>
                 <li>
@@ -350,7 +350,7 @@
                     <span class="tag tag-link">Inglés</span>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/groups/microdelecion15q" target="_blank">Grupo de Apoyo en Facebook</a>
+                    <a href="https://www.instagram.com/sindromedelecion15q11.2/" target="_blank">Grupo de Apoyo en Instagram</a>
                     <span class="tag tag-link">Comunidad</span>
                 </li>
             </ul>
