--- a/recursos.html
+++ b/recursos.html
@@ -491,7 +491,7 @@
                 <div class="brochure-item">
                     <div class="brochure-icon">🏥</div>
                     <h3>Proyecto diagnóstico</h3>
-                    <a href="https://github.com/Evelez23/microdelecion-15q11.2/raw/main/resources/PROYECTO%20DE%20DIAGNÓSTICO%20SEGUIMIENTO%20Y%20TRATAMIENTO.pdf" class="btn-download" download>
+                    <a href="https://github.com/Evelez23/microdelecion-15q11.2/blob/main/resources/PROYECTO%20DE%20DIAGN%C3%93STICO%2C%20SEGUIMIENTO%20Y%20TRATAMIENTO%20DE%20LOS%20PACIENTES%20CON%20S%C3%8DNDROME%20DE%20INVERSI%C3%93N-DUPLICACI%C3%93N%20DEL%20CROMOSOMA%2015.pdf" class="btn-download" download>
                         <span>Descargar</span>
                     </a>
                 </div>
@@ -499,7 +499,7 @@
                 <div class="brochure-item">
                     <div class="brochure-icon">🆕</div>
                     <h3>Nuevo síndrome</h3>
-                    <a href="https://github.com/Evelez23/microdelecion-15q11.2/raw/main/resources/Un%20nuevo%20síndrome%20con%20expresividad%20variable.pdf" class="btn-download" download>
+                    <a href="https://github.com/Evelez23/microdelecion-15q11.2/blob/main/resources/Un%20nuevo%20s%C3%ADndrome%20con%20expresividad%20variable%20.pdf" class="btn-download" download>
                         <span>Descargar</span>
                     </a>
                 </div>
