--- a/recursos.html
+++ b/recursos.html
@@ -694,5 +694,6 @@
             document.getElementById('toggle-text').textContent = 'Ocultar sugerencias';
         });
     </script>
+    <IdeaBox />
 </body>
 </html>
