--- a/casos.html
+++ b/casos.html
@@ -16,15 +16,16 @@
       <div class="brand">
         <img class="logo" src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/logo%20micro1.png" alt="Logo Microdeleción 15q11.2">
         <div>Microdeleción 15q11.2</div>
-     <div class="nav-links">
-                <a href="index.html">Inicio</a>
-                <a href="genetica.html">Genética</a> 
-                <a href="casos.html">Casos</a>
-                <a href="estadisticas.html">Estadísticas</a>
-                <a href="resumen.html">Resumen</a>
-                <a href="recursos.html" class="active">Recursos</a>
-                <a class="btn-agregar" href="formulario.html">Reportar caso</a>
-            </div>
+      </div>
+      <div class="nav-links">
+        <a href="index.html">Inicio</a>
+        <a href="genetica.html">Genética</a>
+        <a href="casos.html" class="active">Casos</a>
+        <a href="estadisticas.html">Estadísticas</a>
+        <a href="resumen.html">Resumen</a>
+        <a href="recursos.html">Recursos</a>
+        <a class="btn-agregar" href="formulario.html">Reportar caso</a>
+      </div>
     </div>
   </nav>
 
@@ -53,7 +54,6 @@
 
     <div class="filtros-activos" id="filtros-activos"></div>
 
-    <!-- Estadísticas de resultados -->
     <div class="panel" id="estadisticas-resultados">
       <div class="grid-3">
         <div>
@@ -71,14 +71,11 @@
       </div>
     </div>
 
-    <!-- Casos Validados -->
     <h2>Casos Validados</h2>
     <div id="casos-validados-container" class="listado-casos"></div>
 
-    <!-- Casos No Validados -->
     <h2>Casos No Validados</h2>
     <div id="casos-no-validados-container" class="listado-casos"></div>
-
   </section>
 
   <div class="disclaimer">
@@ -87,5 +84,4 @@
 
   <footer class="footer">© 2025 | Comunidad de Familias 15q11.2</footer>
 </body>
-
 </html>
