--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <div class="brand">
         <img class="logo" src="https://raw.githubusercontent.com/Evelez23/microdelecion-15q11.2/refs/heads/main/img/logo%20micro1.webp" alt="Logo Microdeleción 15q11.2">
         <div>Microdeleción 15q11.2</div>
-      </div>
-      <div class="nav-links">
-        <a href="index.html" class="active">Inicio</a>
-        <a href="genetica.html">Genética</a>
-        <a href="casos.html">Casos</a>
-        <a href="estadisticas.html">Estadísticas</a>
-        <a href="resumen.html">Resumen</a>
-        <a href="recursos.html">Recursos</a>
-        <a class="btn-agregar" href="formulario.html">Reportar caso</a>
-      </div>
+        </div>
+            <div class="nav-links">
+                <a href="index.html">Inicio</a>
+                <a href="genetica.html">Genética</a> 
+                <a href="casos.html">Casos</a>
+                <a href="estadisticas.html">Estadísticas</a>
+                <a href="resumen.html">Resumen</a>
+                <a href="recursos.html" class="active">Recursos</a>
+                <a class="btn-agregar" href="formulario.html">Reportar caso</a>
+            </div>
     </div>
   </nav>
 
