--- a/formulario.html
+++ b/formulario.html
@@ -295,4 +295,6 @@
     });
   </script>
 </body>
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script src="form.js"></script>
 </html>
