--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Microdeleción 15q11.2 – Portal Comunitario</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
+        /* styles.css - Manteniendo todos tus estilos originales */
         :root {
             --bg: #161b2e;
             --card: #0f1730;
@@ -345,6 +346,23 @@
             padding: 30px;
             color: var(--muted);
             font-style: italic;
+        }
+
+        /* Estilos para pinturas */
+        .pintura-oleo {
+            border-radius: 16px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            border: 3px solid rgba(255, 255, 255, 0.1);
+            max-width: 100%;
+            height: auto;
+        }
+
+        .pie-foto {
+            text-align: center;
+            font-style: italic;
+            color: var(--muted);
+            margin-top: 10px;
+            font-size: 0.9em;
         }
 
         /* Responsive adjustments */
